<resources>
    <string name="app_name">UserStory</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="createdAt">Created at</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="create_story_success">You have successfully created new story</string>
    <string name="register_success">Your account is successfully created. Please login to continue</string>
    <string name="login_success">You are successfully logged in!</string>
    <string name="continue_">Continue</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_language">Change language</string>
    <string name="create_story">Create your own story</string>
    <string name="title_welcome_page">Welcome to UserStory</string>
    <string name="message_welcome_page">Let\'s connect with each other by sharing your precious stories!</string>
    <string name="title_signup_page">Register yourself to UserStory</string>
    <string name="title_login_page">Excited to share your story?</string>
    <string name="message_login_page">Login first!</string>
    <string name="title_main_page">Browse everyone\'s stories here</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="no_data">The data is still empty</string>
    <string name="error_message">An error occurred</string>
    <string name="error_email">Invalid email address</string>
    <string name="error_password_less_8">Password must be at least 8 characters</string>
    <string name="maps">Maps</string>
    <string name="include_location">Include your current location</string>
    <string name="retry">Try again</string>
</resources>